# flower

examples/libtorch_client/: .CMakeLists.txt.swp  CMakeLists.txt  fedavg_libtorch.py
examples/libtorch_client/src/: torch_client.cc
examples/libtorch_client2/: CMakeLists.txt
examples/libtorch_client2/include/: torch_client.h
examples/quickstart_cpp/: CMakeLists.txt
examples/quickstart_cpp/include/: synthetic_dataset.h
src/cc/flwr/: CMakeLists.txt  flwr_client.cc  pytorch_client.h
src/cc/flwr/include/: .start.h.swp  start.cc  start.h
